Bug 257909 - AX: Fix for active-descendant-changes-result-in-focus-changes.html in isolated tree mode.
Summary: AX: Fix for active-descendant-changes-result-in-focus-changes.html in isolate...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Accessibility (show other bugs)
Version: WebKit Nightly Build
Hardware: All All
: P2 Normal
Assignee: Andres Gonzalez
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-06-09 13:37 PDT by Andres Gonzalez
Modified: 2023-06-12 05:52 PDT (History)
11 users (show)

See Also:


Attachments
Patch (3.77 KB, patch)
2023-06-09 13:40 PDT, Andres Gonzalez
no flags Details | Formatted Diff | Diff
Patch (4.59 KB, patch)
2023-06-10 09:00 PDT, Andres Gonzalez
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Andres Gonzalez 2023-06-09 13:37:27 PDT
The case where the list looses the active descendant attribute is failing in ITM.
Comment 1 Radar WebKit Bug Importer 2023-06-09 13:37:52 PDT
<rdar://problem/110544948>
Comment 2 Andres Gonzalez 2023-06-09 13:40:50 PDT
Created attachment 466655 [details]
Patch
Comment 3 Tyler Wilcock 2023-06-09 13:56:51 PDT
Comment on attachment 466655 [details]
Patch

r+ once compilation errors due to unused value on !ENABLE(ACCESSIBILITY_ISOLATED_TREE) platforms are fixed.
Comment 4 Andres Gonzalez 2023-06-10 09:00:01 PDT
Created attachment 466663 [details]
Patch
Comment 5 EWS 2023-06-12 05:52:17 PDT
Committed 265065@main (cbe05390f6ae): <https://commits.webkit.org/265065@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 466663 [details].