AX: Fix for active-descendant-changes-result-in-focus-changes.html in isolated tree mode. https://bugs.webkit.org/show_bug.cgi?id=257909 <rdar://problem/110544948>

Reviewed by Tyler Wilcock.

The last test case in this test was failing because if the aria-activedescendant attribute is removed, then focus should go back to the element itself. We were not updating the isolated tree in this case.

* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::handleActiveDescendantChanged):
(WebCore::AXObjectCache::handleAttributeChange):
* Source/WebCore/accessibility/AXObjectCache.h:

Canonical link: https://commits.webkit.org/265065@main